--- a/web/app/themes/platformlondon/styles/platform-history.css
+++ b/web/app/themes/platformlondon/styles/platform-history.css
@@ -3,10 +3,14 @@
     @apply relative mb-8;
 }
 
+.platform-history.wp-block-cover {
+    overflow: visible;
+}
+
 .platform-history h2 {
     @apply !text-white;
 }
 
 .platform-history .wp-block-navigation {
-    @apply absolute -bottom-4 left-1/2 -translate-x-1/2 md:-top-4 md:left-2/3 md:bottom-auto md:translate-x-0;
+    @apply absolute -bottom-4 left-1/2 -translate-x-1/2 md:-top-3 md:left-2/3 md:bottom-auto md:translate-x-0;
 }
